--- a/style.scss
+++ b/style.scss
@@ -82,7 +82,7 @@ h5 {
     }
 }
 
-.name {
+h1 {
     font-size: 56px;
     font-weight: 700;
     letter-spacing: 100;
@@ -95,14 +95,16 @@ h5 {
 
 .first-name {
     color: $black-color;
+    font-size: 56px;
 }
 
 .last-name {
     color: $yellow-color;
+    font-size: 56px;
 }
 
 .profession {
-    padding-bottom: 90px;
+    padding-bottom: 110px;
     font-size: 26px;
 }
 
