feat: add footer

--- a/style.scss
+++ b/style.scss
@@ -267,3 +267,16 @@ h1 {
         color: $color-grey;
     }
 }
+
+.logo{
+    width: 100px;
+    svg{
+        opacity: 0.8;
+    }
+    
+}
+
+.footer{
+    padding-top: 200px;
+    margin: auto 0;
+}
