--- a/style.css
+++ b/style.css
@@ -261,4 +261,17 @@ h1 {
   text-decoration: none;
   color: #464646;
 }
+
+.logo {
+  width: 100px;
+}
+
+.logo svg {
+  opacity: 0.8;
+}
+
+.footer {
+  padding-top: 200px;
+  margin: auto 0;
+}
 /*# sourceMappingURL=style.css.map */
